# mars-bluetooth-hci

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml
.github/scripts/: check_readme_versions.py
.github/workflows/: ci.yml  release.yml
bluetooth-hci/: CHANGELOG.md  Cargo.toml  bluetooth-hci-rust-config.cmake  bluetooth_hci_rs.h  generate_headers.sh
bluetooth-hci/src/: lib.rs  libc.rs
bluetooth-hci/src/event/: mod.rs
bluetooth-hci/src/event/hci_le_cs/: constants.rs  hci_file_reader.rs  mod.rs  subevent_result.rs
docs/: architecture.md  c-embedded-integration.md  ecosystem.md  wire-format.md
docs/adr/: 0001-wire-format-postcard-cobs.md  0002-serialize-only-ffi.md
mars-bluetooth-hci/: CHANGELOG.md  Cargo.toml  README.md  mars-bluetooth-hci-rust-config.cmake  mars_bluetooth_hci.h
mars-bluetooth-hci/src/: lib.rs  libc.rs
mars-bluetooth-hci/src/event/: mod.rs
mars-bluetooth-hci/src/event/hci_le_cs/: constants.rs  hci_file_reader.rs  mod.rs  subevent_result.rs
mars-common/: CHANGELOG.md  Cargo.toml  README.md
mars-common/src/: fmt.rs  lib.rs  serde.rs
mars-common/src/libc/: alloc.rs  panic.rs  serialize.rs
mars-hci-common/: CHANGELOG.md  Cargo.toml
mars-hci-common/src/: fmt.rs  lib.rs  serde.rs
mars-hci-common/src/libc/: alloc.rs  mod.rs  panic.rs  serialize.rs
