[package]
name = "mars-bluetooth-hci"
version = "0.7.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Metirionic/mars-bluetooth-hci"
description = "Bluetooth HCI event parsing library for Bluetooth Channel Sounding (BLE CS)"
keywords = ["no-std", "hci", "channel-sounding", "ble", "embedded"]
categories = ["embedded"]

[lib]
name = "mars_bluetooth_hci"
crate-type = ["lib", "staticlib"]

[dependencies]
mars-common = { path = "../mars-common", version = "0.1.0", default-features = false }

heapless = "0.9.3"
hex = { version = "0.4", default-features = false }
postcard = { version = "1", optional = true }
safer-ffi = { version = "0.2.0-rc1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3.19.0", default-features = false, features = [
    "macros",
] }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
colog = "1.4.0"
log = "0.4.29"

[features]
default = ["std", "libc", "alloc"]

std = ["hex/std", "mars-common/std"]
alloc = ["postcard/alloc"]

libc = ["dep:postcard", "mars-common/libc"]
libc-alloc = ["libc", "mars-common/libc-alloc"]
libc-panic = ["libc", "mars-common/libc-panic"]

headers = ["safer-ffi/headers"]
